--- a/notebooks/aizarani_integration_tests.Rmd
+++ b/notebooks/aizarani_integration_tests.Rmd
@@ -4,7 +4,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, dev = c('pdf', 'png'))
 library(Seurat)
 library(tidyverse)
 source("workflow.R")
