--- a/notebooks/aizarani.Rmd
+++ b/notebooks/aizarani.Rmd
@@ -14,7 +14,7 @@ output:
 ## Aizarani dataset
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(fig.width = 7, fig.height=5, dev = c('pdf', 'png'))
 library(Seurat)
 library(tidyverse)
 
